--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teaching</title>
+    <title>CD Studio: Javascript</title>
+    <link rel="icon" href="/assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/scripts.js"></script>
 </head>
@@ -26,8 +27,10 @@
             <li>[<a href="/people.html">People</a>]</li>
             <li>[<a href="projects">Projects</a>]</li>
             <li>[<a href="/resources.html">Resources</a>]</li>
-            <li>[<a href="/syllabus.html">Syllabus</a>]</li>
         </ul>
     </nav>
+    <main>
+        <img src="/assets/imgs/counting-apples.jpg">
+    </main>
 </body>
 </html>
