--- a/calendar.html
+++ b/calendar.html
@@ -95,7 +95,7 @@
                     <li>INSTALL: [<a href="https://code.visualstudio.com/">VSCode</a>], [<a href="https://desktop.github.com/">GitHub Desktop</a>]</li>
                 </ul>
                 
-                <p><em>Please register an account on [<a href="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F&source=header-home">GitHub</a>] if you don’t have one already.</em></p>
+                <p><em>Please register an account on [<a href="https://github.com">GitHub</a>] if you don’t have one already.</em></p>
             </div>
         </article>
     </main>
