--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
     </nav>
     <main>
-        <img src="/assets/imgs/counting-apples.jpg">
+        <img src="/assets/imgs/JS_Array.png">
     </main>
 </body>
 </html>
