--- a/calendar.html
+++ b/calendar.html
@@ -47,7 +47,8 @@
                         [<a href="https://www.youtube.com/watch?v=PJqbivkm0Ms">Minority Report UI Design</a>]<br>
                         [<a href="https://skins.webamp.org/">Winamp Skins Museum</a>]
                     </li>
-                    <li>ASSIGNMENT: Prepare a working draft of your Media Player project for mid-way presentations in class <u>December 2</u>.
+                    <li>ASSIGNMENT: Prepare a working draft of your Media Player project for mid-way presentations in class <u>December 2</u>.<br><br>
+                        Keep in mind that all projects from this course including the final should be presented and linked on your homepage website from the first assignment. Please prepare and finalize your live site by <u>December 16</u>.
                     </li>
                 </ul>
             </div>
