--- a/custom-media-demo_12.09.21/index.html
+++ b/custom-media-demo_12.09.21/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
-    <title>Document</title>
+    <title>Custom Media Demo</title>
 </head>
 <body>
     <div id="playPause"></div>
