--- a/calendar.html
+++ b/calendar.html
@@ -40,7 +40,7 @@
             <div class="content">
                 <h2>• Custom Controls Demo •</h2>
                 <p>
-                    In class we will walk through a demo of how to code media player controls from scratch, including a playlist feature. The demo site can be found here: LINK and the files to work from are linked below. Following the tutorial we will meet in small groups to share progress and feedback on the final project.
+                    In class we will walk through a demo of how to code media player controls from scratch, including a playlist feature. The demo site can be found here: [<a href="/assets/demo-files/custom-media-demo_12.09.21">http://class-is-on.com/assets/demo-files/custom-media-demo_12.09.21</a>] and the files to work from are linked below. Following the tutorial we will meet in small groups to share progress and feedback on the final project.
                 </p>
                 <ul>
                     <li>FILES: <br>
